--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body{font-size: 12px;font-family:"微软楷体";color:#fff;}
 .slide04{position: relative;background: url(../img/slide01-bg.jpg);width: 100%;height: 100%;background-size:100% 100%;}
 .slide01-img{position: absolute;left:20%;top:5%;width:1.2rem;height:1.5rem;}
 .slide01-img img{width:100%;height:100%;margin-left: -50%;}
-.slide01-text01{position: absolute;left: 30%;bottom: 10%;text-align: center;font-size: 1rem;}
+.slide01-text01{position: absolute;left: 30%;top: 40%;text-align: center;font-size: 1rem;}
 .slide01-text01 li{width: 1rem;height: auto;}
 .slide01-text02{position: absolute;right: 10%;top: 0;font-size: 0.5rem;width: 0.5rem;height: auto;line-height: 1rem;}
 .slide01-text03{position: absolute;left: 10%;top:25%;font-size: 1rem;}
@@ -29,10 +29,10 @@ body{font-size: 12px;font-family:"微软楷体";color:#fff;}
 .slide03 span{width: 1.8rem;text-align: center;}
 .slide03 ul{display: flex;flex-flow:row ;font-size: 0.4rem;margin: 1rem 0 1rem 0;}
 .slide03 li{width: 0.4rem;height: 0.7rem;background: #00f;margin-left: 0.3rem;}
-.slide03-img{position: absolute;left: 50%;bottom: 10%;}
+.slide03-img{position: absolute;left: 50%;top: 70%;}
 .slide03-img img{width: 100%;height: 100%;margin-left: -50%;}
 
 .slide04 h2{font-size: 0.3rem;text-align: center;margin-top: 0.5rem;}
 .erwei{position: absolute;left: 50%;top: 25%;width: 4rem;height: 4rem;}
 .erwei img{width: 100%;height: 100%;margin-left:-50% ;}
-.contact{position: absolute;width: 100%;left: 50%;bottom: 10%;text-align: center;font-size: 0.4rem;line-height: 0.8rem;margin-left:-50% ;}
+.contact{position: absolute;width: 100%;left: 50%;top: 70%;text-align: center;font-size: 0.4rem;line-height: 0.8rem;margin-left:-50% ;}
