--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,9 @@ body,p,div,h1,h2,h3,h4,ul,li,dl,dt,dd,a,img,em,i,strong,b,table,tr,td,form,input
 li{list-style: none;}
 img{border:0 none;vertical-align: top;}
 em,i{ font-style:normal;}
-a{ text-decoration:none;color: #5468fc;}
+a{ text-decoration:none;color: #f00;}
 a:hover{ color:#ff0;}
-body{font-size: 12px;font-family:"微软楷体";color:#fff;}
+body{font-size: 12px;font-family:"微软雅黑";color:#fff;}
 .swiper-container{height: 100%;}
 .slide01{position: relative;background: url(../img/slide04-bg.jpg);width: 100%;height: 100%;background-size:100% 100%;}
 .slide02{position: relative;background: url(../img/slide02-bg.jpg);width: 100%;height: 100%;background-size:100% 100%;}
@@ -12,12 +12,12 @@ body{font-size: 12px;font-family:"微软楷体";color:#fff;}
 .slide04{position: relative;background: url(../img/slide01-bg.jpg);width: 100%;height: 100%;background-size:100% 100%;}
 .slide01-img{position: absolute;left:20%;top:5%;width:1.2rem;height:1.5rem;}
 .slide01-img img{width:100%;height:100%;margin-left: -50%;}
-.slide01-text01{position: absolute;left: 30%;top: 40%;text-align: center;font-size: 1rem;}
+.slide01-text01{position: absolute;left: 30%;top: 40%;text-align: center;font-size: 1rem;color: #04fada;}
 .slide01-text01 li{width: 1rem;height: auto;}
-.slide01-text02{position: absolute;right: 10%;top: 0;font-size: 0.5rem;width: 0.5rem;height: auto;line-height: 1rem;}
+.slide01-text02{position: absolute;right: 10%;top: 0;font-size: 0.5rem;width: 0.5rem;height: auto;line-height: 1rem;color: #fae004;}
 .slide01-text03{position: absolute;left: 10%;top:25%;font-size: 1rem;}
 
-.slide02 h2{font-size: 0.8rem;text-align: center;margin-top: 0.5rem;}
+.slide02 h2{font-size: 0.8rem;text-align: center;margin-top: 0.5rem;color:#cffa04;}
 .slide02-text01{position: absolute;left:5%;top: 15%;font-size: 0.3rem;}
 .slide02-text01 li{width: auto;margin-top: 1rem;border-top:0.04rem solid #fff;padding-top:0.3rem ;}
 .slide02-text01 span{font-size: 0.16rem;}
@@ -25,14 +25,18 @@ body{font-size: 12px;font-family:"微软楷体";color:#fff;}
 .slide02-text02 li{width: auto;margin-top: 0.5rem;border-top:0.04rem solid #fff;padding-top:0.3rem ;}
 .slide02-text02 span{font-size: 0.16rem;}
 
-.slide03 h2{font-size: 0.8rem;text-align: center;margin-top: 0.5rem;}
+.slide03 h2{font-size: 0.8rem;text-align: center;margin-top: 0.5rem;color:#cffa04;}
 .slide03 span{width: 1.8rem;text-align: center;}
 .slide03 ul{display: flex;flex-flow:row ;font-size: 0.4rem;margin: 1rem 0 1rem 0;}
-.slide03 li{width: 0.4rem;height: 0.7rem;background: #00f;margin-left: 0.3rem;}
+.slide03 li{width: 0.4rem;height: 0.7rem;margin-left: 0.3rem;}
 .slide03-img{position: absolute;left: 50%;top: 70%;}
 .slide03-img img{width: 100%;height: 100%;margin-left: -50%;}
+.color01{background: #f00;}
+.color02{background: #0f0;}
+.color03{background: #00f;}
+.color04{background: #0ff;}
 
-.slide04 h2{font-size: 0.3rem;text-align: center;margin-top: 0.5rem;}
+.slide04 h2{font-size: 0.3rem;text-align: center;margin-top: 0.5rem;color:#cffa04;}
 .erwei{position: absolute;left: 50%;top: 25%;width: 4rem;height: 4rem;}
 .erwei img{width: 100%;height: 100%;margin-left:-50% ;}
 .contact{position: absolute;width: 100%;left: 50%;top: 70%;text-align: center;font-size: 0.4rem;line-height: 0.8rem;margin-left:-50% ;}
